# CC-LC

./: README.md  inference.py  model.py
CC-LC/source/commonlib/: CMakeLists.txt  CodingUnit.cpp  CodingUnit.h  Picture.cpp  Picture.h  arithmetic_codec.cpp  arithmetic_codec.h  global_arithmetic.cpp  global_arithmetic.h  utility.cpp  utility.h
CC-LC/source/decoder/: CMakeLists.txt  decOptions.cpp  decoder.cpp
CC-LC/source/encoder/: CMakeLists.txt  encOptions.cpp  encOptions.h  encoder.cpp
models/: models.txt
